--- a/packages/lucia/package.json
+++ b/packages/lucia/package.json
@@ -30,11 +30,13 @@
 	"author": "pilcrowonpaper",
 	"license": "MIT",
 	"devDependencies": {
+		"@types/jsonwebtoken": "^9.0.6",
 		"@types/node": "^18.6.2",
 		"prettier": "^2.3.0",
 		"vitest": "^0.33.0"
 	},
 	"dependencies": {
+		"jsonwebtoken": "^9.0.2",
 		"oslo": "1.2.0"
 	}
 }
